Fixing menu on small devices, removing underline for telephone.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,9 +230,22 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
       font-size: 3rem;
     }
   }
-  @media only screen and (max-width: 320px) {
+
+  @media screen and (max-height: 700px) {
     .text-8xl {
       font-size: 2rem;
+    }
+    .text-8xl li {
+      padding-bottom: 0.3rem;
+    }
+  }
+
+  @media screen and (max-height: 600px) {
+    .text-8xl {
+      font-size: 1.5rem;
+    }
+    .mob-address {
+      padding-top: 0.5rem !important;
     }
   }
 
